# servmgr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker.yml
docs/: data-model.md  development.md  specifications.md  technical.md  user-guide.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  config-yaml.ts  sse.ts  types.ts  version.ts
frontend/src/lib/components/: ServerCard.svelte  ServerForm.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/config/: +page.svelte
frontend/src/routes/servers/[id]/: +page.svelte
spec/: main.md
src/: api.rs  config.rs  db.rs  engine.rs  events.rs  health.rs  main.rs  power.rs  types.rs
